--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
             <br>
             <br>
             <div class="introduction">
-                <h2>Introduction:</h2>
+                <br>
+                <br>
+                <h1>Introduction:</h1>
+                <br>
+                <br>
                 <p>Life is unpredectable, well too many things are for my liking but where this really matters is our environment. We've ignored climate change for years and changes across the planet are no longer something we can ignore as the doom and gloom is already here. Every year unprecident weather events wreak havoc accross land and sea and not only has it gotten more dangerous, it has become consistent. Hotter and longer summers get and colder and shorter the winters have become. We are at a precipice of no return unles we act this decade.
                 <br>
                 <br>
@@ -117,19 +121,29 @@
                 <br>
                 <br>
                 I believe Computer Science is a purposeful and necessary vocation epitomizing the human disposition and will to survive by blending creativity with practical application. At its core it is the human imagination realised providing solutions to future problems in the my present.</p>
+                <br>
+                <br>
             </div>
         
             <div class="about_me">
-                <h2>About Me:</h2>
+                <h1>Discover:</h1>
+                <br>
+                <br>
                 <img src="images/5.jpg">
+                <br>
+                <br>
                 <p>Over the year I have attended several coding courses learning remotelya and using online tools such as YouTube, Coursera, EDX and GitHub. My learning has included auditing courses from these sources to gain fundamental logic and basis for programming and solving problems.I have a love for creativity and content consumption having spent most of my life around computers. The realization humans can create absurd, altruistic systems and technologies used day to day in supererogatory interests of technological advancemennt is euphoric.
                 <br>
                 <br>
-                Whether it is the Data Scientists who gather information on chemicals and their particulate structures by working with scientists in preperation for a pandemic, or the Software Engineers who transcode that data into functional programs which unambiguously function to determine specific threats and mitigate risks, the sophistication and hard work behind such technologies ignite by passion for technology and computing.</p> 
+                Whether it is the Data Scientists who gather information on chemicals and their particulate structures by working with scientists in preperation for a pandemic, or the Software Engineers who transcode that data into functional programs which unambiguously function to determine specific threats and mitigate risks, the sophistication and hard work behind such technologies ignite by passion for technology and computing.</p>
+                <br>
+                <br> 
             </div>
 
             <div class="interests">
-                <h2>Interests:</h2>
+                <h1>Interests:</h1>
+                <br>
+                <br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/WXuK6gekU1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <br>
                 <br>
@@ -142,10 +156,15 @@
             <br>
             <br>
             <div class="code_nation">
-                <h2>Code Nation:</h2>
+                <h1>{Code Nation}:</h1>
+                <br>
+                <br>
                 <img src="images/2.jpeg">
-                    <br>
+                <br>
+                <br>
                 <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. As of publishing this website I have been familiarised with the following programming languages; Python, HTML and CSS. Going forward I want to add JavaScript, Swift and C++ to the list.
+                <br>
+                <br>
                 <img src="images/1.jpeg">
                 <br>
                 <br>
@@ -154,7 +173,8 @@
                 <br>
                 <i>"If you cannot explain it simply, you do not understand it fully." </i> 
                 I am confident that once I am fully orientated with syntax this habbit will not be an issue.</p>
-
+                <br>
+                <br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/reY50t2hbuM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <br>
                 <br>
@@ -178,60 +198,74 @@
             <br>
             <br>
             <div class="week_1">
-                <h1>Week 1</h1> 
+                <h1>Week 1</h1>
+                <br>
+                <br> 
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQYG2DxPpas5AUIOnFFqz9JKabQ4eVks20IpmdwKj1YuR4mGiOAA0SbcJhXl5fjpj1LJqds_tfVaYxG/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 <br>
                 <br>
                 <p>In the first week I covered functions, methods, variables, if/else statements and pretty much everything you need to start building simple progrms. Being practical and writing code as frequently as possible whether you understand the syntax or not is the best way to learn a programming language, grudually it will start to make sense. Python syntax is almsot identical to Ruby so this made things very easy for me. I think this part is comfortable for everybody when they first try a new language, the logic is almost universal when it comes to code.
-                    <br>
-                    <br>
+                <br>
+                <br>
             <h2>Project 1: Building A Digital ATM</h2>
                 This was an independedn project I took on to be more practical with my learning. Using what was covered in week 2 and the notes I took, I wanted to put into action a program that contained all the syntax and logic I had just learned. The result was a simple Cash Machine.</p>
                 <br>
                 <br>
             <h3>Try out my Virtual Cash Machine below:</h3>
                 <iframe src="https://trinket.io/embed/python/eb06b48100?outputOnly=true&runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+                <br>
+                <br>
             </div>
         <br>
         <br>
             <div class="week_2">
-                <h1>Week 2</h1>   
-                <p>Lists were introduced where we covered arrays, sorting and iterating methods. Loops were covered to expand lessons on conditional operation. I decided on taking very detailed notes as the intricay of loop methods was quite complex although simple in logic.
-                    <br>
-                    <br>
+                <h1>Week 2</h1>
+                <br>
+                <br>   
+                <p>
+                    Lists were introduced where we covered arrays, sorting and iterating methods. Loops were covered to expand lessons on conditional operation. I decided on taking very detailed notes as the intricay of loop methods was quite complex although simple in logic.
+                <br>
+                <br>
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQM1_GvAZzTTRVkkxM_H_2pYF8SzGnuGGKqB1frYV-ywAvZDKxYZIcHqfcX2laGscjN-q7h7ceQok_e/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 <br>
                 <br>
-                Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry
+                    Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry
                 <br>
                 <br>
                 <h2>Project 2: Building A Code Based Text Game</h2>
-                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSqgE6AzzSpM8kwdp5CPbJQ7P0c-wBEDfp5rGPF6obl47KINmmeFb_MdROA56e7b9nSdArH0S3Lzg7N/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <br>
+                <br>
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSqgE6AzzSpM8kwdp5CPbJQ7P0c-wBEDfp5rGPF6obl47KINmmeFb_MdROA56e7b9nSdArH0S3Lzg7N/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 <br>
                 <br>
                     Above is a presentation telling you more about the game. We based the concept of our game on the assasination of US President J.F. Kennedy. The story was built around historical record and accounts. You play as the President, then as his would be killer Lee Harvey Oswald tryong to make the best decision you can to expose the conspiracy aginst you masterminded by the powers that be.</p>
                 <br>
                 <br>
                     <h3>Think you can survive? Go ahead and play The Conspiracy below:</h3>
+                <br>
+                <br>
                     <iframe src="https://trinket.io/embed/python/b82b62c271?outputOnly=true&runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
             </div>
             <br>
             <br>
             <div class="week_3">
-                <h1>Week 3</h1>   
-                <p>Probably the most exhausasting of the week, the last leg of the course. HTML and CSS was introduced and we stepped into Web Development. Due to the linear syntax of HTML is was very easy to graps and familiarise however, like most people CSS was... annoying. Its syntax has an annoying curce with too many layers, unlike Python is is very customizable and can be off-putting. Once I understoof the genral logic in the syntax using tutorial and tools to build projects became easy. I found the best way to work with CSS is to not complicate things. 
-            <br>
-            <br>
+                <h1>Week 3</h1>
+                <br>
+                <br>   
+                <p>
+                    Probably the most exhausasting of the week, the last leg of the course. HTML and CSS was introduced and we stepped into Web Development. Due to the linear syntax of HTML is was very easy to graps and familiarise however, like most people CSS was... annoying. Its syntax has an annoying curce with too many layers, unlike Python is is very customizable and can be off-putting. Once I understoof the genral logic in the syntax using tutorial and tools to build projects became easy. I found the best way to work with CSS is to not complicate things. 
+                <br>
+                <br>
                 <h2>Project 3: Building A Website</h2>
-                Designing a website is like going to a Coffee Shop and asking for a hot drink, you then get asked if you want a Caffe Verona but you have no idea what that is. Settling on idea at least for me was the hardest thing to do, I procrastinated for days. Eventually I realized I was complicationg things again and settled in the simplest yet most relevant idea. Lets hope you liked it!
-            <br>
-            <br>
+                    Designing a website is like going to a Coffee Shop and asking for a hot drink, you then get asked if you want a Caffe Verona but you have no idea what that is. Settling on idea at least for me was the hardest thing to do, I procrastinated for days. Eventually I realized I was complicationg things again and settled in the simplest yet most relevant idea. Lets hope you liked it!
+                <br>
+                <br>
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTYaEgpa5TJ7yagKAolzl3Ah1a-3EOWDb8HH-IDFoxSvyKJ4QZiUO9vu4qIMNdvzQjqGLeG0eSD86WD/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            <br>
-            <br>
+                <br>
+                <br>
                 That is it for everything I covered on the Develop: Code course with Code Nation. That was a Behind The Scenes peak into this website before it went live, but now that you're using it - it isn't bad right?</p>
-            <br>
-            <br>
+                <br>
+                <br>
             </div>
         </section>
         <!-- about -->
@@ -246,9 +280,14 @@
             <br>
             <div class="contact_details">
                 <h3>Telephone:</h3>
+                <br>
+                <br>
                 0123 456 7890
                 <br>
+                <br>
                 <h3>Email:</h3>
+                <br>
+                <br>
                 prxncx@somerandomserver.com
                 <br>
                 <br>
@@ -271,7 +310,9 @@
             <br>
             <br>
             <div class="disclaimer">
-                <h4>Disclaimer:</h4>
+                <h4>Website Terms and Conditions:</h4>
+                <br>
+                <br>
                     <p>The information contained in this website is for general information purposes only. The information is provided by [business name] and while we endeavour to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.
                     <br>
                     <br>
